# nemotron-reasoning-lora

./: .gitignore  README.md  pyproject.toml  reasoning_lora.py  requirements.txt
configs/: grpo_reasoning.json  reasoning_lora.json
data/: README.md
docs/: project_roadmap.md
docs/notes/: 5.10.md  5.11.md  5.12.md  5.13.md  5.14.md  5.15.md  5.9.md  题型总结.md
examples/: README.md  inference_example.md
results/: README.md  experiment_log_template.md
src/reasoning_nemotron/: __init__.py  paths.py
src/reasoning_nemotron/data/: __init__.py  annotate_reasoning.py  annotate_reasoning_rigorous.py  refine_underdetermined_reasoning.py  sample_data.py  split_single_item_train_test.py
src/reasoning_nemotron/evaluation/: audit_reasoning.py  local_metric.py
src/reasoning_nemotron/inference/: __init__.py  chat_lora.py
src/reasoning_nemotron/legacy/: __init__.py  chat_lora_scratch.py  sft_trainer_scratch.py
src/reasoning_nemotron/training/: __init__.py  grpo_reasoning.py  reasoning_lora.py
